plugins {
    id 'java'
    id 'application'
    id 'checkstyle'
    id 'jacoco'
}

group = 'ru.mentee.power'
version = '1.0-SNAPSHOT'

ext {
    junitVersion = '5.11.0' // BCORE-1
    assertjVersion = '3.26.3' // BCORE-1
    lombokVersion = '1.18.46'  // BCORE-4
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

//application {

//}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform("org.junit:junit-bom:${junitVersion}")
    testImplementation "org.junit.jupiter:junit-jupiter"
    testImplementation "org.assertj:assertj-core:${assertjVersion}"
    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
}

// Настройка тестов
test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport  // генерировать отчёт после тестов
    testLogging {  // для gradle test вывод более детальный
        events "passed", "skipped", "failed"
        exceptionFormat = "full"
        showStandardStreams = true
        showCauses = true
        showExceptions = true
    }
}

checkstyle {
    toolVersion = '10.12.4' // актуальная версия на 2025 год для Gradle 9.1
    maxErrors = 0 // даже 1 ошибка (severity=error) → сборка падает
    maxWarnings = 999 // предупреждения (severity=warning) не блокируют сборку
    configFile = file("${rootDir}/config/checkstyle/checkstyle.xml") // раскомментируй эту строку
}

// Создавал в other вместо verification
tasks.withType(Checkstyle) {
    group = 'verification'
}

// Настройка JaCoCo
jacoco {
    toolVersion = '0.8.14'  // актуальная версия на 2025 год с поддержкой Java 25
}

// Настройка JaCoCo отчёта
jacocoTestReport {
    dependsOn test  // отчёт генерируется после выполнения тестов
    reports {
        xml.required = false
        csv.required = false
        html.required = true
        html.outputLocation = layout.buildDirectory.dir('reports/jacoco/test/html')
    }
}

// Настройка проверки покрытия (минимум 80%)
jacocoTestCoverageVerification {
    dependsOn jacocoTestReport
    violationRules {
        rule {
//            можно исключить определённые пути при проверке
//            excludes = [
//                    '**/ProgressDemo*'
//            ]

            limit {
                minimum = 0.80  // 80% покрытия инструкций
            }
        }
    }
}

// Интеграция проверок в lifecycle
check {
    dependsOn jacocoTestCoverageVerification
}

// Для вызова ./gradlew ci вместо огромной строки
tasks.register('ci') {
    dependsOn 'clean', 'checkstyleMain', 'test', 'jacocoTestCoverageVerification', 'build'
}